# xml-oxidator

./: BENCHMARK.md  CLAUDE.md  Cargo.toml  IMPROVEMENT.md  PERFORMANCE.md  README.md  SUGGESTIONS.md  TODO.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
src/: cancellation.rs  collector.rs  diagnostic.rs  error.rs  filereader.rs  init.rs  lib.rs  macros.rs  nodebuilder.rs  pipeline.rs  rule.rs  rulebuilder.rs  ruleset.rs  view.rs  xmlworker.rs
src/reader/: capture.rs  context.rs  mod.rs  parser.rs
src/tree/: builder.rs  descriptor.rs  mod.rs  path.rs
tests/: integration_test.rs  macro_test.rs
