[package]
name = "xml-oxydizer"
version = "0.1.0"
edition = "2024"

[dependencies]
educe = "0.6.0"
futures = "0.3.32"
itertools = "0.14.0"
quick-xml = { version = "0.40.1", features = ["async-tokio"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["full", "io", "io-util"] }

[dev-dependencies]
dhat = "0.3.3"
educe = "0.6.0"
tokio-test = "0.4.5"


[features]
test-heap = []