[package]
name = "xml-oxydizer"
version = "0.2.0"
edition = "2024"

[dependencies]
bumpalo = { version = "3.17", features = ["collections"] }
quick-xml = "0.40.1"
rayon = "1.10"
crossbeam-channel = "0.5"
smallvec = "1.15"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3.3"

[features]
macros = []
test-heap = []

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
lto = "fat"
codegen-units = 1
strip = "symbols"
